--- a/program/MODULES/module_5.ipynb
+++ b/program/MODULES/module_5.ipynb
@@ -17,6 +17,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Original array : \n",
+      " [0 1 2 3 4 5 6 7]\n",
+      "\n",
+      "array reshaped with 2 rows and 4 columns : \n",
+      " [[0 1 2 3]\n",
+      " [4 5 6 7]]\n",
+      "\n",
+      "array reshaped with 4 rows and 2 columns : \n",
+      " [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]]\n",
+      "\n",
+      "Original array reshaped to 3D : \n",
+      " [[[0 1]\n",
+      "  [2 3]]\n",
+      "\n",
+      " [[4 5]\n",
+      "  [6 7]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as geek\n",
+    " \n",
+    "# array = geek.arrange(8)\n",
+    "# The 'numpy' module has no attribute 'arrange'\n",
+    "array1 = geek.arange(8)\n",
+    "print(\"Original array : \\n\", array1)\n",
+    " \n",
+    "# shape array with 2 rows and 4 columns\n",
+    "array2 = geek.arange(8).reshape(2, 4)\n",
+    "print(\"\\narray reshaped with 2 rows and 4 columns : \\n\",\n",
+    "      array2)\n",
+    " \n",
+    "# shape array with 4 rows and 2 columns\n",
+    "array3 = geek.arange(8).reshape(4, 2)\n",
+    "print(\"\\narray reshaped with 4 rows and 2 columns : \\n\",\n",
+    "      array3)\n",
+    " \n",
+    "# Constructs 3D array\n",
+    "array4 = geek.arange(8).reshape(2, 2, 2)\n",
+    "print(\"\\nOriginal array reshaped to 3D : \\n\",\n",
+    "      array4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Accuracy: 1.0\n"
      ]
     }
